--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="route_call_failure">Verifique su conexion a Internet</string>
     <string name="user_location_permission_explanation">Necesitamos que otorgue permisos para usar la app</string>
     <string name="user_location_permission_not_granted">El usuario no ha aceptado los permisos</string>
-    <string name="access_token">pk.eyJ1IjoicmF5Z2d6ejEiLCJhIjoiY2thMWljNnhiMDB2aDNsbHd3cHZyc21odiJ9.1wnIhUc0l-yPCXYDNfnv_A</string>
+    <string name="access_token">Inserte su token de mapbox aqui</string>
     <string name="textoAyuda">Para trazar sus rutas, haga clic para el punto origen y clic largo para el punto de destino</string>
 </resources>
